--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,26 @@
+certifi==2020.6.20
 click==8.0.3
+colorama==0.4.4
+dataclasses==0.8
 Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
-gunicorn==20.1.0
+importlib-metadata==4.8.2
 itsdangerous==2.0.1
 Jinja2==3.0.3
+joblib==1.1.0
 MarkupSafe==2.0.1
-numpy
-pandas
+numpy==1.19.5
+pandas==1.1.5
 python-dateutil==2.8.2
 pytz==2021.3
+scikit-learn==0.24.2
+scipy==1.5.4
 six==1.16.0
+sklearn==0.0
 SQLAlchemy==1.4.27
+threadpoolctl==3.0.0
+typing_extensions==4.0.0
 Werkzeug==2.0.2
-sklearn
-pickle4==0.0.1
+wincertstore==0.2
+zipp==3.6.0
