--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dataclasses==0.6
 Flask==2.0.2
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+gunicorn==20.1.0
 importlib-metadata==4.8.2
 itsdangerous==2.0.1
 Jinja2==3.0.3
